# beech

./: .gitignore  Cargo.toml
beech/: .gitignore  Cargo.toml
beech-cli/: Cargo.toml
beech-cli/src/: key_columns.rs  main.rs  memory.rs  txio.rs
beech-core/: Cargo.toml
beech-core/src/: error.rs  lib.rs  lib_tests.rs  plan.rs  plan_tests.rs  query.rs  query_tests.rs  source.rs  wire.rs  wire_tests.rs
beech-mem/: Cargo.toml
beech-mem/src/: lib.rs  lru.rs  lru_tests.rs  mmap.rs  mmap_tests.rs
beech-shaper/: Cargo.toml
beech-shaper/nottests/: mean_matches_cdf.rs
beech-shaper/src/: lib.rs  lib_tests.rs
beech-sqlite3/: Cargo.toml  build.rs  wrapper.h
beech-sqlite3-test/: Cargo.toml
beech-sqlite3-test/src/: main.rs
beech-sqlite3/src/: lib.rs
beech-sqlite3/src/c/: shim.c
beech-sqlite3/src/store/: file.rs
beech-sqlite3/tests/: basic.rs  composite_key.rs  errors.rs  order_by.rs  planner.rs  where_clauses.rs
beech-sqlite3/tests/common/: mod.rs
beech-test-fixtures/: Cargo.toml
beech-test-fixtures/src/: lib.rs
beech-test-fixtures/tests/: cursor.rs  transaction.rs  write.rs
beech-visualizer/: README.md  package-lock.json  package.json  server.js
beech-visualizer/public/: index.html
beech-watchdir/: Cargo.toml
beech-watchdir/src/: main.rs
beech-write/: Cargo.toml
beech-write/src/: lib.rs  lib_tests.rs  transaction.rs
beech/src/: compress.rs  crypt.rs  domainscheme  groundscheme  http.rs  lib.rs  pagescheme  query.rs  source.rs  source2.rs  tablescheme  wire.rs
lru-cache/: Cargo.toml  README.md
lru-cache/src/: heapsize.rs  lib.rs
posixmq-stream/: Cargo.toml
rust/atomicwrites/: Cargo.toml
rust/atomicwrites/src/: lib.rs
rust/atomicwrites/tests/: lib.rs
rust/beech/: .gitignore  Cargo.toml
rust/beech/src/: compress.rs  crypt.rs  domainscheme  groundscheme  http.rs  lib.rs  pagescheme  query.rs  source.rs  source2.rs  tablescheme  wire.rs
rust/lru-cache/: Cargo.toml
rust/lru-cache/src/: lib.rs
rust/merge/: Cargo.toml
rust/merge/src/: lib.rs
rust/siglatch/: Cargo.toml
rust/siglatch/src/: lib.rs
