[package]
name = "beech-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
beech-core = { path = "../beech-core" }
beech-mem = { path = "../beech-mem" }
beech-shaper = { path = "../beech-shaper" }
beech-write = { path = "../beech-write" }
apache-avro.workspace = true
clap = { version = "4.5.38", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
jiff = "0.1"
anyhow = "1.0.98"
itertools = "0.14.0"
sha2 = "0.10.9"
csv = "1.3"
log = "0.4"
env_logger = "0.10"
rand = "0.8"