[package]
name = "beech-core"
version = "0.1.0"
edition = "2024"

[dependencies]
apache-avro.workspace = true
serde = {workspace = true, optional = true}
serde_bytes.workspace = true
serde-value.workspace = true
thiserror.workspace = true
ordered-float = "5.0.0"
log = "0.4.27"
beech-mem = { path = "../beech-mem" }
#apache-avro-derive.workspace = true


[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
log = "0.4.27"
simple_logger = "5.0.0"
