[package]
name = "beech-sqlite3"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.35.0", features = ["vtab", "modern_sqlite", "loadable_extension"] }
beech-core = { path = "../beech-core" }
beech-mem = { path = "../beech-mem" }
beech-shaper = { path = "../beech-shaper" }
apache-avro.workspace = true
thiserror.workspace = true
log = "0.4"
