[package]
name = "beech"
version = "0.1.0"
authors = ["Graham Miller <gmiller@amilarcap.com>"]
publish = false
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde-value = "0.5.2"
serde_bytes = "0.10.4"
avro-rs = "0.8.0"
serde_json = "1.0"
url = "1.7.2"
lru-cache = {path="../lru-cache"}
failure = "0.1.1"
failure_derive = "0.1.1"
ordered-float = "0.5.0"
curl = {version="0.4.19", optional=true}
lazy_static = "1.4.0"
log = "0.4.3"
