[package]
name = "beech"
version = "0.1.0"
authors = ["Graham Miller <gmiller@amilarcap.com>"]
publish = false
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde-value = "0.5.2"
serde_bytes = "0.10.4"
apache-avro = "0.14.0"
serde_json = "1.0"
url = "1.7.2"
lru-cache = {path="../lru-cache"}
ordered-float = "0.5.0"
curl = {version="0.4.19", optional=true}
lazy_static = "1.4.0"
log = "0.4.3"
anyhow = "1.0"
thiserror = "1.0.24"
